# mlflow-python-webhook

./: .pre-commit-config.yaml  LICENSE  README.md  check_changes.py  pipeline.py  requirements.txt  server.py  setup.cfg  test_pipeline.py
scripts/: check-changes  mlflow-webhook
src/mlflow_webhook/: __init__.py  pipeline.py  server.py
tests/: test_pipeline.py
