[metadata]
name = mlflow_webhook
version = 0.0.1
author = Joaquin Torre Zaffaroni
author_email = joaquintorrezaffaroni@gmail.com
description = A server that listens for Github Webhooks and runs the changed MLFlow entrypoints.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Roj/mlflow-python-webhook
project_urls =
    Bug Tracker = https://github.com/Roj/mlflow-python-webhook/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    argparse
    fastapi
    gitpython
    pathlib
    PyYAML
    uvicorn
    termcolor
scripts =
    scripts/mlflow-webhook
    scripts/check-changes

[options.extras_require]
dev = pre-commit; pytest
[options.packages.find]
where = src
